tests/compile_fail_macro2/jsclass_on_impl.rs
use rquickjs::*;

struct Foo;

#[jsclass]
impl Foo {}

fn main() {}
